--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -13,7 +13,8 @@
     "@tabler/core": "^1.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
