--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@table-library/react-table-library": "^4.1.15",
     "@tabler/core": "^1.3.2",
     "axios": "^1.9.0",
+    "jquerry": "^0.0.1-security",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
